tests/language_modules/01_core/invalid_syntax/test.ps1
& (Join-Path $PSScriptRoot "..\test.ps1") @args
exit $LASTEXITCODE